Atualização do exercício 22 para a versão 1.4

--- a/modulo-3/exercicios/ex022/fundo006.html
+++ b/modulo-3/exercicios/ex022/fundo006.html
@@ -3,23 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
+            /*
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /* Shorthand - background
+                color -> image -> position -> repeat -> [size] -> attachment
+            */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            min-width: 300px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border-radius: 15px;
+        }
+        p {
+            text-indent: 20px;
+            text-align: justify;
         }
     </style>
 </head>
@@ -28,6 +41,18 @@
         <h1>
             Teste de Imagem de Fundo
         </h1>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum qui, reiciendis placeat ad, fugiat doloremque voluptatibus tempora soluta cumque blanditiis corporis. Impedit perferendis non vero nam laudantium voluptatibus esse officiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel eaque harum reiciendis maxime repudiandae nobis atque praesentium pariatur, nemo fugiat illo, magni ipsam blanditiis vitae placeat quasi mollitia dolorem nostrum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur fuga vitae aperiam fugiat dolores sed rem? Consequuntur, ipsam. Et earum fuga consequuntur, quae iste tempora. Commodi, obcaecati incidunt! Ipsum, eum.
+        </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum qui, reiciendis placeat ad, fugiat doloremque voluptatibus tempora soluta cumque blanditiis corporis. Impedit perferendis non vero nam laudantium voluptatibus esse officiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel eaque harum reiciendis maxime repudiandae nobis atque praesentium pariatur, nemo fugiat illo, magni ipsam blanditiis vitae placeat quasi mollitia dolorem nostrum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur fuga vitae aperiam fugiat dolores sed rem? Consequuntur, ipsam. Et earum fuga consequuntur, quae iste tempora. Commodi, obcaecati incidunt! Ipsum, eum.
+        </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum qui, reiciendis placeat ad, fugiat doloremque voluptatibus tempora soluta cumque blanditiis corporis. Impedit perferendis non vero nam laudantium voluptatibus esse officiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel eaque harum reiciendis maxime repudiandae nobis atque praesentium pariatur, nemo fugiat illo, magni ipsam blanditiis vitae placeat quasi mollitia dolorem nostrum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur fuga vitae aperiam fugiat dolores sed rem? Consequuntur, ipsam. Et earum fuga consequuntur, quae iste tempora. Commodi, obcaecati incidunt! Ipsum, eum.
+        </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum qui, reiciendis placeat ad, fugiat doloremque voluptatibus tempora soluta cumque blanditiis corporis. Impedit perferendis non vero nam laudantium voluptatibus esse officiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel eaque harum reiciendis maxime repudiandae nobis atque praesentium pariatur, nemo fugiat illo, magni ipsam blanditiis vitae placeat quasi mollitia dolorem nostrum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur fuga vitae aperiam fugiat dolores sed rem? Consequuntur, ipsam. Et earum fuga consequuntur, quae iste tempora. Commodi, obcaecati incidunt! Ipsum, eum.
+        </p>
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum qui, reiciendis placeat ad, fugiat doloremque voluptatibus tempora soluta cumque blanditiis corporis. Impedit perferendis non vero nam laudantium voluptatibus esse officiis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel eaque harum reiciendis maxime repudiandae nobis atque praesentium pariatur, nemo fugiat illo, magni ipsam blanditiis vitae placeat quasi mollitia dolorem nostrum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur fuga vitae aperiam fugiat dolores sed rem? Consequuntur, ipsam. Et earum fuga consequuntur, quae iste tempora. Commodi, obcaecati incidunt! Ipsum, eum.
         </p>
