Adição de alguns exercícios e desafios de tabelas

--- a/modulo-3/exercicios/ex023/tabela002.html
+++ b/modulo-3/exercicios/ex023/tabela002.html
@@ -13,6 +13,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         caption {
@@ -23,8 +24,14 @@
             border-radius: 4px 4px 0px 0px;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
         thead, tfoot {
-            background-color: gray;
+            background-color: #383838;
             color: white;
         }
         tbody tr:nth-child(odd) {  /* 2n-1 */
@@ -182,5 +189,29 @@
             </tr>
         </tfoot>
     </table>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, esse quia. Id tenetur alias officia soluta assumenda debitis repellat odit? Corporis nostrum quis amet maxime sunt dicta, quidem voluptate incidunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, temporibus. Repudiandae animi vel dolorum ex, soluta at eaque dolore error alias obcaecati iste in, qui corrupti perferendis voluptatibus, aliquid perspiciatis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia deleniti, ullam ex cum sint tenetur expedita a voluptates dolorum facilis repudiandae obcaecati dignissimos quam voluptas libero. Iste sapiente earum voluptatibus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus commodi ratione officiis ipsum iure? Consequuntur excepturi pariatur incidunt unde, adipisci quos quam enim exercitationem officiis rerum. Necessitatibus quas obcaecati maiores!
+
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, esse quia. Id tenetur alias officia soluta assumenda debitis repellat odit? Corporis nostrum quis amet maxime sunt dicta, quidem voluptate incidunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, temporibus. Repudiandae animi vel dolorum ex, soluta at eaque dolore error alias obcaecati iste in, qui corrupti perferendis voluptatibus, aliquid perspiciatis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia deleniti, ullam ex cum sint tenetur expedita a voluptates dolorum facilis repudiandae obcaecati dignissimos quam voluptas libero. Iste sapiente earum voluptatibus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus commodi ratione officiis ipsum iure? Consequuntur excepturi pariatur incidunt unde, adipisci quos quam enim exercitationem officiis rerum. Necessitatibus quas obcaecati maiores!
+
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, esse quia. Id tenetur alias officia soluta assumenda debitis repellat odit? Corporis nostrum quis amet maxime sunt dicta, quidem voluptate incidunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, temporibus. Repudiandae animi vel dolorum ex, soluta at eaque dolore error alias obcaecati iste in, qui corrupti perferendis voluptatibus, aliquid perspiciatis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia deleniti, ullam ex cum sint tenetur expedita a voluptates dolorum facilis repudiandae obcaecati dignissimos quam voluptas libero. Iste sapiente earum voluptatibus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus commodi ratione officiis ipsum iure? Consequuntur excepturi pariatur incidunt unde, adipisci quos quam enim exercitationem officiis rerum. Necessitatibus quas obcaecati maiores!
+
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, esse quia. Id tenetur alias officia soluta assumenda debitis repellat odit? Corporis nostrum quis amet maxime sunt dicta, quidem voluptate incidunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, temporibus. Repudiandae animi vel dolorum ex, soluta at eaque dolore error alias obcaecati iste in, qui corrupti perferendis voluptatibus, aliquid perspiciatis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia deleniti, ullam ex cum sint tenetur expedita a voluptates dolorum facilis repudiandae obcaecati dignissimos quam voluptas libero. Iste sapiente earum voluptatibus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus commodi ratione officiis ipsum iure? Consequuntur excepturi pariatur incidunt unde, adipisci quos quam enim exercitationem officiis rerum. Necessitatibus quas obcaecati maiores!
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, esse quia. Id tenetur alias officia soluta assumenda debitis repellat odit? Corporis nostrum quis amet maxime sunt dicta, quidem voluptate incidunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, temporibus. Repudiandae animi vel dolorum ex, soluta at eaque dolore error alias obcaecati iste in, qui corrupti perferendis voluptatibus, aliquid perspiciatis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia deleniti, ullam ex cum sint tenetur expedita a voluptates dolorum facilis repudiandae obcaecati dignissimos quam voluptas libero. Iste sapiente earum voluptatibus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus commodi ratione officiis ipsum iure? Consequuntur excepturi pariatur incidunt unde, adipisci quos quam enim exercitationem officiis rerum. Necessitatibus quas obcaecati maiores!
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, esse quia. Id tenetur alias officia soluta assumenda debitis repellat odit? Corporis nostrum quis amet maxime sunt dicta, quidem voluptate incidunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, temporibus. Repudiandae animi vel dolorum ex, soluta at eaque dolore error alias obcaecati iste in, qui corrupti perferendis voluptatibus, aliquid perspiciatis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia deleniti, ullam ex cum sint tenetur expedita a voluptates dolorum facilis repudiandae obcaecati dignissimos quam voluptas libero. Iste sapiente earum voluptatibus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus commodi ratione officiis ipsum iure? Consequuntur excepturi pariatur incidunt unde, adipisci quos quam enim exercitationem officiis rerum. Necessitatibus quas obcaecati maiores!
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, esse quia. Id tenetur alias officia soluta assumenda debitis repellat odit? Corporis nostrum quis amet maxime sunt dicta, quidem voluptate incidunt. Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, temporibus. Repudiandae animi vel dolorum ex, soluta at eaque dolore error alias obcaecati iste in, qui corrupti perferendis voluptatibus, aliquid perspiciatis? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia deleniti, ullam ex cum sint tenetur expedita a voluptates dolorum facilis repudiandae obcaecati dignissimos quam voluptas libero. Iste sapiente earum voluptatibus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus commodi ratione officiis ipsum iure? Consequuntur excepturi pariatur incidunt unde, adipisci quos quam enim exercitationem officiis rerum. Necessitatibus quas obcaecati maiores!
+    </p>
 </body>
 </html>
