--- a/modulo-4/exercicios/ex025/form003.html
+++ b/modulo-4/exercicios/ex025/form003.html
@@ -25,7 +25,7 @@
 
         <p>
             <label for="idia">Dia da Prova:</label>
-            <input type="date" name="dia" id="idia">
+            <input type="date" name="dia" id="idia" value="2001-09-11">
         </p>
         
         <p>
