--- a/modulo-4/exercicios/ex026/mq005/index.html
+++ b/modulo-4/exercicios/ex026/mq005/index.html
@@ -45,7 +45,7 @@
             if (window.innerWidth >=768) {
                 itens.style.display = 'block'
             } else {
-                window.style.display = 'none'
+                itens.style.display = 'none'
             }
         }
 
